MetaData/Depends_on/c4-eip.tf
resource "aws_eip" "my-eip" {
  instance = aws_instance.my-ec2-vm.id
  vpc      = true
  #Meta Argument depends_on
  depends_on = [
    aws_internet_gateway.vpc-dev-igw
  ]
}
